welcome.lessons.welcome.array.array123.Array123.scala.error
array123:5: error: missing arguments for method && in class Boolean;
follow this method with `_' if you want to treat it as a partially applied function
		if (nums(x)==1&&nums(x+1)==2&&nums(x+2)==3&&x<=nums.length-3&& nums.length%3=0) i=true
                                                                            ^