welcome.lessons.welcome.array.array123.Array123.scala.code
def array123(nums:Array[Int]): Boolean = {
	var i:Boolean=false;

	for (x<-0 to nums.length-1) {
		if (nums(x)==1&&nums(x+1)==2&&nums(x+2)==3&&x<=nums.length-3&& nums.length%3=0) i=true
		else if (nums(0)==1&&nums(1)==2&&nums(2)==3) i= true
	}
	return i
}
